sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:21: error: type mismatch;
 found   : Unit
 required: Boolean
	}while(trie=0)
                   ^