sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
var trie:Int=0;
	do{
		trie=1;
		for(i<-0 to getNombreValeurs()-2 by 1){
			if(plusPetit(i+1, i)){
				echange(i+1,i);
				trie=0;
			}
		}
		
		for(i<-getNombreValeurs()-2 to 0 by -1){
			if(plusPetit(i, i+1)){
				echange(i,i+1);
				trie=0;
			}
		}

		
	}while(trie=0)
}